--- a/elwikijsp.root/bundles_elwiki_model/org.elwiki.data.edit/plugin.properties
+++ b/elwikijsp.root/bundles_elwiki_model/org.elwiki.data.edit/plugin.properties
@@ -19,7 +19,7 @@ _UI_PageAttachment_type = Page Attachment
 _UI_Object_type = Object
 _UI_Comparable_type = Comparable
 _UI_Cloneable_type = Cloneable
-_UI_IModifyInfo_type = IModify Info
+_UI_IHistoryInfo_type = IModify Info
 _UI_PageReference_type = Page Reference
 _UI_AclEntry_type = Acl Entry
 _UI_Principal_type = Principal
@@ -58,10 +58,10 @@ _UI_PageAttachment_cacheable_feature = Cacheable
 _UI_PageAttachment_wikipage_feature = Wikipage
 _UI_PageAttachment_place_feature = Place
 _UI_PageAttachment_size_feature = Size
-_UI_IModifyInfo_version_feature = Version
-_UI_IModifyInfo_lastModify_feature = Last Modify
-_UI_IModifyInfo_author_feature = Author
-_UI_IModifyInfo_changeNote_feature = Change Note
+_UI_IHistoryInfo_version_feature = Version
+_UI_IHistoryInfo_lastModify_feature = Last Modify
+_UI_IHistoryInfo_author_feature = Author
+_UI_IHistoryInfo_changeNote_feature = Change Note
 _UI_PageReference_pageId_feature = Page Id
 _UI_PageReference_wikipage_feature = Wikipage
 _UI_AclEntry_principal_feature = Principal
