improvement the attachments code

--- a/elwikijsp.root/bundles/org.elwiki.ajax-dispatcher/build.properties
+++ b/elwikijsp.root/bundles/org.elwiki.ajax-dispatcher/build.properties
@@ -1,6 +1,5 @@
 source.. = src/
 output.. = target/classes/
-bin.includes = META-INF/,\
-               .,\
-               OSGI-INF/elwiki.WikiAjaxDispatcher.xml,\
-               OSGI-INF/WikiAjaxDispatcherServlet.xml
+bin.includes = .,\
+               META-INF/,\
+               OSGI-INF/
