JAR artifacts moved into local p2 repository as bundles

--- a/elwikijsp.root/bundles/org.elwiki.main/build.properties
+++ b/elwikijsp.root/bundles/org.elwiki.main/build.properties
@@ -1,16 +1,13 @@
 source.. = src/
 output.. = target/classes/
-bin.includes = META-INF/,\
-               .,\
+bin.includes = .,\
+               META-INF/,\
                OSGI-INF/,\
-               akismet-java-1.02.jar,\
-               ehcache-2.10.6.jar,\
-               freshcookies-security-0.60.jar,\
-               org.suigeneris.jrcs.diff-0.4.2.jar,\
                ini/,\
                plugin/
 additional.bundles = jakarta.servlet-api,\
                      javax.servlet.jsp-api,\
                      javax.mail,\
                      org.slf4j.api,\
-                     org.elwiki.util
+                     org.elwiki.util,\
+                     net.sf.ehcache
