--- a/elwikijsp.root/bundles/org.elwiki.resources/build.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/build.properties
@@ -9,12 +9,12 @@ bin.includes = .,\
                webapp/,\
                plugin.xml,\
                taglibs-standard-impl-1.2.5.fixed.jar,\
-               taglibs-standard-spec-1.2.5.jar,\
-               sandler-0.5.jar,\
-               freshcookies-security-0.60.jar,\
-               xmlrpc-2.0.1.jar
+               taglibs-standard-spec-1.2.5.jar
 additional.bundles = jakarta.servlet-api,\
                      javax.servlet.jsp-api,\
                      org.eclipse.jface,\
                      org.elwiki.data,\
-                     org.apache.jasper.glassfish
+                     org.apache.jasper.glassfish,\
+                     net.sourceforge.sandler,\
+                     org.freshcookies.security,\
+                     xmlrpc
