--- a/p2_repositories/apache-tools/pom.xml
+++ b/p2_repositories/apache-tools/pom.xml
@@ -33,6 +33,7 @@
 							<artifacts>
 								<!-- specify your depencies here -->
 								<!-- groupId:artifactId:version -->
+								<artifact><id>xmlrpc:xmlrpc:2.0.1</id><source>true</source></artifact>
 								<artifact>
 									<id>org.apache.felix:org.apache.felix.webconsole:4.3.16</id>
 									<source>false</source>
