--- a/elwikijsp.root/bundles_managers/org.elwiki.manager.filters/build.properties
+++ b/elwikijsp.root/bundles_managers/org.elwiki.manager.filters/build.properties
@@ -1,10 +1,9 @@
 source.. = src/
 output.. = target/classes/
-bin.includes = META-INF/,\
-               .,\
-               ini/,\
-               xmlrpc-2.0.1.jar,\
-               OSGI-INF/
+bin.includes = .,\
+               META-INF/,\
+               OSGI-INF/,\
+               ini/
 additional.bundles = jakarta.servlet-api,\
                      javax.servlet.jsp-api,\
                      org.eclipse.jface,\
