moved lucene jars to osgi bundles. lucene version increased to version 9.4.2

--- a/elwikijsp.root/bundles_managers/org.elwiki.manager.search/build.properties
+++ b/elwikijsp.root/bundles_managers/org.elwiki.manager.search/build.properties
@@ -1,15 +1,12 @@
 source.. = src/
 output.. = target/classes/
-bin.includes = META-INF/,\
-               .,\
-               OSGI-INF/,\
-               jars/lucene-analyzers-common-8.5.1.jar,\
-               jars/lucene-core-8.5.1.jar,\
-               jars/lucene-highlighter-8.5.1.jar,\
-               jars/lucene-memory-8.5.1.jar,\
-               jars/lucene-queries-8.5.1.jar,\
-               jars/lucene-queryparser-8.5.1.jar,\
-               jars/lucene-sandbox-8.5.1.jar
+bin.includes = .,\
+               META-INF/,\
+               OSGI-INF/
 additional.bundles = org.elwiki.data,\
                      org.elwiki.configuration,\
-                     org.eclipse.jface
+                     org.eclipse.jface,\
+                     org.apache.lucene.core,\
+                     org.apache.lucene.highlighter,\
+                     org.apache.lucene.queryparser,\
+                     org.apache.lucene.analysis-common
