--- a/p2_repositories/apache-tools/pom.xml
+++ b/p2_repositories/apache-tools/pom.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001 XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-
 	<artifactId>apache-tools</artifactId>
 	<packaging>pom</packaging>
 	<name>Apache tools</name>
@@ -12,20 +11,21 @@
 		<version>1.0.0</version>
 		<relativePath>../</relativePath>
 	</parent>
-
 	<repositories>
+		<repository>
+			<id>CentralRepository</id>
+			<url>https://repo1.maven.org/maven2/</url>
+		</repository>
 		<repository>
 			<id>JabylonRepository</id>
 			<url>https://www.jabylon.org/maven/</url>
 		</repository>
 	</repositories>
-
 	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.reficio</groupId>
 				<artifactId>p2-maven-plugin</artifactId>
-				<version>1.3.0</version>
 				<executions>
 					<execution>
 						<id>default-cli</id>
@@ -33,7 +33,52 @@
 							<artifacts>
 								<!-- specify your depencies here -->
 								<!-- groupId:artifactId:version -->
-								<artifact><id>xmlrpc:xmlrpc:2.0.1</id><source>true</source></artifact>
+								<artifact>
+									<id>org.apache.lucene:lucene-core:9.4.2</id>
+									<source>true</source>
+									<transitive>true</transitive>
+<!--
+									<override>true</override>
+									<instructions>
+										<Import-Package>*;resolution:=optional</Import-Package>
+										<Export-Package>*</Export-Package>
+									</instructions>
+-->
+								</artifact>
+								<artifact>
+									<id>org.apache.lucene:lucene-analysis-common:9.4.2</id>
+									<source>true</source>
+									<transitive>true</transitive>
+								</artifact>
+								<artifact>
+									<id>org.apache.lucene:lucene-queries:9.4.2</id>
+									<source>true</source>
+									<transitive>true</transitive>
+								</artifact>
+								<artifact>
+									<id>org.apache.lucene:lucene-highlighter:9.4.2</id>
+									<source>true</source>
+									<transitive>true</transitive>
+								</artifact>
+								<artifact>
+									<id>org.apache.lucene:lucene-queryparser:9.4.2</id>
+									<source>true</source>
+									<transitive>true</transitive>
+								</artifact>
+								<artifact>
+									<id>org.apache.lucene:lucene-memory:9.4.2</id>
+									<source>true</source>
+									<transitive>true</transitive>
+								</artifact>
+								<artifact>
+									<id>org.apache.lucene:lucene-sandbox:9.4.2</id>
+									<source>true</source>
+									<transitive>true</transitive>
+								</artifact>
+								<artifact>
+									<id>xmlrpc:xmlrpc:2.0.1</id>
+									<source>true</source>
+								</artifact>
 								<artifact>
 									<id>org.apache.felix:org.apache.felix.webconsole:4.3.16</id>
 									<source>false</source>
@@ -46,6 +91,7 @@
 									<id>org.apache.taglibs.standard:glassfish:1.2.0</id>
 									<source>true</source>
 								</artifact>
+<!--
 								<artifact>
 									<id>org.apache.taglibs:taglibs-standard-impl:1.2.1</id>
 									<source>true</source>
@@ -62,6 +108,7 @@
 									<id>org.apache.taglibs:taglibs-standard-jstlel:1.2.1</id>
 									<source>true</source>
 								</artifact>
+-->
 								<!--
 								<artifact>
 									<id>org.apache:xalan:2.7.1</id>
