--- a/p2_repositories/custom-p2-site/pom.xml
+++ b/p2_repositories/custom-p2-site/pom.xml
@@ -19,7 +19,6 @@
 			<plugin>
 				<groupId>org.reficio</groupId>
 				<artifactId>p2-maven-plugin</artifactId>
-				<version>1.3.0</version>
 				<executions>
 					<execution>
 						<id>default-cli</id>
@@ -39,10 +38,10 @@
 									<id>commons-beanutils:commons-beanutils:1.7.0</id>
 									<source>true</source>
 								</artifact>
-								<artifact>
+								<!--<artifact>
 									<id>commons-fileupload:commons-fileupload:1.0</id>
 									<source>true</source>
-								</artifact>
+								</artifact>-->
 								<artifact>
 									<id>commons-validator:commons-validator:1.1.4</id>
 									<source>true</source>
