--- a/p2_repositories/pom.xml
+++ b/p2_repositories/pom.xml
@@ -10,7 +10,10 @@
 	<description>Root for make p2 repositories</description>
 
 	<properties>
-		<p2-maven-plugin.version>1.3.0</p2-maven-plugin.version>
+		<maven.compiler.source>11</maven.compiler.source>
+		<maven.compiler.target>11</maven.compiler.target>
+
+		<p2-maven-plugin.version>2.1.0</p2-maven-plugin.version>
 		<jetty-maven-plugin.version>8.1.5.v20120716</jetty-maven-plugin.version>
 	</properties>
 
