--- a/elwikijsp.root/bundles_elwiki/org.elwiki.authorize/build.properties
+++ b/elwikijsp.root/bundles_elwiki/org.elwiki.authorize/build.properties
@@ -5,8 +5,7 @@ bin.includes = META-INF/,\
                OSGI-INF/,\
                plugin.xml,\
                jspwiki.policy,\
-               users.json,\
-               groups.json
+               users_groups.json
 additional.bundles = jakarta.servlet-api,\
                      javax.mail,\
                      org.elwiki.util,\
