--- a/elwikijsp.root/bundles/org.elwiki.util/ini/jspwiki.properties
+++ b/elwikijsp.root/bundles/org.elwiki.util/ini/jspwiki.properties
@@ -494,20 +494,20 @@ jspwiki.renderingManager.markupParser=org.apache.wiki.parser.JSPWikiMarkupParser
 #  If you do not wish to use container-managed authentication, you can use JSPWiki's
 #  own custom authentication system. This uses a JAAS LoginModule (supplied below)
 #  to log in the user. You can use any JAAS LoginModule you want.
-#  The default class is org.apache.wiki.auth.login.UserDatabaseLoginModule,
+#  The default class is org.apache.wiki.auth.login.AccountRegistryLoginModule,
 #  which compares the supplied username and hashed password with the values stored
 #  in the configured UserDatabase (see USER DATABASE below).
 #
 #  Supply the JAAS LoginModule class used for custom authentication here.
 #  The implementation MUST have a zero-argument constructor (as noted in the
 #  javax.security.auth.spi.LoginModule Javadocs).
-jspwiki.loginModule.class = org.apache.wiki.auth.login.UserDatabaseLoginModule
+jspwiki.loginModule.class = org.apache.wiki.auth.login.AccountRegistryLoginModule
 
 #
 # JAAS LoginContext parameters used to initialize the LoginModule. Note that 'param1'
 #  etc. should be replaced with the actual parameter names. The parameter names and
 # values will be loaded to a Map and passed to the LoginModule as the 'options' parameter
-# when its initialize() method is called. The default UserDatabaseLoginModule class does
+# when its initialize() method is called. The default AccountRegistryLoginModule class does
 # not need any options.
 #jspwiki.loginModule.options.param1 = value1
 #jspwiki.loginModule.options.param2 = value2
