--- a/elwikijsp.root/bundles_managers/org.elwiki.manager.workflow/build.properties
+++ b/elwikijsp.root/bundles_managers/org.elwiki.manager.workflow/build.properties
@@ -3,3 +3,4 @@ output.. = target/classes/
 bin.includes = META-INF/,\
                .,\
                OSGI-INF/
+additional.bundles = org.osgi.service.event
