RSS generator component was extracted into its own package. Added artifact org.apache.commons:commons-text into local p2 repository.

--- a/elwikijsp.root/bundles/org.elwiki.api/build.properties
+++ b/elwikijsp.root/bundles/org.elwiki.api/build.properties
@@ -6,4 +6,6 @@ bin.includes = META-INF/,\
                OSGI-INF/
 additional.bundles = jakarta.servlet-api,\
                      javax.servlet.jsp-api,\
-                     org.eclipse.jface
+                     org.eclipse.jface,\
+                     org.apache.commons.commons-text,\
+                     org.apache.commons.lang3
