--- a/elwikijsp.root/bundles/pom.xml
+++ b/elwikijsp.root/bundles/pom.xml
@@ -22,6 +22,7 @@
 		<module>org.elwiki.event</module>
 		<module>org.elwiki.util</module>
 		<module>org.elwiki.resources</module>
+		<module>org.elwiki.rssgenerator</module>
 		<module>org.elwiki.core.plugins</module>
 		<module>org.elwiki.main</module>
 	</modules>
