--- a/elwikijsp.root/bundles_managers/org.elwiki.manager.renderer/build.properties
+++ b/elwikijsp.root/bundles_managers/org.elwiki.manager.renderer/build.properties
@@ -5,4 +5,6 @@ bin.includes = META-INF/,\
                OSGI-INF/
 additional.bundles = jakarta.servlet-api,\
                      org.eclipse.jface,\
-                     org.elwiki.configuration
+                     org.elwiki.configuration,\
+                     org.apache.commons.commons-text,\
+                     org.apache.commons.lang3
