--- a/elwikijsp.root/bundles/org.elwiki.rssgenerator/.project
+++ b/elwikijsp.root/bundles/org.elwiki.rssgenerator/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.elwiki.configuration</name>
+	<name>org.elwiki.rssgenerator</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -22,11 +22,6 @@
 		</buildCommand>
 		<buildCommand>
 			<name>org.eclipse.pde.ds.core.builder</name>
-			<arguments>
-			</arguments>
-		</buildCommand>
-		<buildCommand>
-			<name>org.eclipse.babel.editor.rbeBuilder</name>
 			<arguments>
 			</arguments>
 		</buildCommand>
