--- a/p2_repositories/apache-tools/pom.xml
+++ b/p2_repositories/apache-tools/pom.xml
@@ -76,6 +76,10 @@
 									<transitive>true</transitive>
 								</artifact>
 								<artifact>
+									<id>org.apache.commons:commons-text:1.10.0</id>
+									<source>true</source>
+								</artifact>
+								<artifact>
 									<id>xmlrpc:xmlrpc:2.0.1</id>
 									<source>true</source>
 								</artifact>
