--- a/elwikijsp.root/bundles/org.elwiki.configuration/preferences.ini
+++ b/elwikijsp.root/bundles/org.elwiki.configuration/preferences.ini
@@ -984,9 +984,12 @@ log4j.rootCategory=INFO,ConsoleLog
 # Uncomment the next line to require the Admin group (or Admin user, if a group is not found)
 # to approve wiki pages after saving.
 #jspwiki.approver.workflow.saveWikiPage=Admin
+node.approvers/workflow.saveWikiPage=Admin
+
 
 # Uncomment the next line to require the Admin group to approve new user profiles
 #jspwiki.approver.workflow.createUserProfile=Admin
+node.approvers/workflow.createUserProfile=Admin
 
 ###########################################################################
 #
