refactoring workflow: Fact[] -> List<Fact>

--- a/elwikijsp.root/bundles/org.elwiki.rssgenerator/build.properties
+++ b/elwikijsp.root/bundles/org.elwiki.rssgenerator/build.properties
@@ -12,4 +12,6 @@ additional.bundles = org.eclipse.osgi.services,\
                      org.apache.commons.lang3,\
                      org.jdom.2,\
                      org.elwiki.api,\
-                     org.elwiki.data
+                     org.elwiki.data,\
+                     org.elwiki.util,\
+                     org.elwiki.configuration
