--- a/elwikijsp.root/bundles_managers/org.elwiki.manager.page/build.properties
+++ b/elwikijsp.root/bundles_managers/org.elwiki.manager.page/build.properties
@@ -6,4 +6,7 @@ bin.includes = META-INF/,\
                plugin.xml,\
                schema/
 additional.bundles = org.eclipse.jface,\
-                     org.elwiki.configuration
+                     org.elwiki.configuration,\
+                     org.elwiki.api,\
+                     org.elwiki.data,\
+                     org.elwiki.util
