review l10n bundle; fixed: show of fail for handling the plugin on the wiki page.

--- a/elwikijsp.root/bundles_managers/org.elwiki.manager.renderer/build.properties
+++ b/elwikijsp.root/bundles_managers/org.elwiki.manager.renderer/build.properties
@@ -7,4 +7,5 @@ additional.bundles = jakarta.servlet-api,\
                      org.eclipse.jface,\
                      org.elwiki.configuration,\
                      org.apache.commons.commons-text,\
-                     org.apache.commons.lang3
+                     org.apache.commons.lang3,\
+                     org.eclipse.jdt.annotation
