refactoring: bundle org.elwiki.main -> org.elwiki.manager.variables

--- a/elwikijsp.root/bundles_managers/org.elwiki.manager.variables/build.properties
+++ b/elwikijsp.root/bundles_managers/org.elwiki.manager.variables/build.properties
@@ -1,10 +1,10 @@
 source.. = src/
 output.. = target/classes/
-bin.includes = .,\
-               META-INF/,\
-               OSGI-INF/,\
-               ini/
-additional.bundles = jakarta.servlet-api,\
+bin.includes = META-INF/,\
+               .,\
+               OSGI-INF/
+additional.bundles = org.elwiki.configuration,\
+                     jakarta.servlet-api,\
                      javax.servlet.jsp-api,\
                      javax.mail,\
                      org.slf4j.api,\
