--- a/elwikijsp.root/bundles_workflow/org.elwiki.manager.workflow/build.properties
+++ b/elwikijsp.root/bundles_workflow/org.elwiki.manager.workflow/build.properties
@@ -3,4 +3,5 @@ output.. = target/classes/
 bin.includes = META-INF/,\
                .,\
                OSGI-INF/
-additional.bundles = org.osgi.service.event
+additional.bundles = org.osgi.service.event,\
+                     javax.mail
