--- a/elwikijsp.root/bundles_managers/org.elwiki.manager.variables/.project
+++ b/elwikijsp.root/bundles_managers/org.elwiki.manager.variables/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.elwiki.main</name>
+	<name>org.elwiki.manager.variables</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -25,15 +25,9 @@
 			<arguments>
 			</arguments>
 		</buildCommand>
-		<buildCommand>
-			<name>org.eclipse.babel.editor.rbeBuilder</name>
-			<arguments>
-			</arguments>
-		</buildCommand>
 	</buildSpec>
 	<natures>
 		<nature>org.eclipse.pde.PluginNature</nature>
 		<nature>org.eclipse.jdt.core.javanature</nature>
-		<nature>com.jaspersoft.studio.babel.editor.rbeNature</nature>
 	</natures>
 </projectDescription>
