--- a/elwikijsp.root/bundles_plugins/org.elwiki.plugins.main/plugin.xml
+++ b/elwikijsp.root/bundles_plugins/org.elwiki.plugins.main/plugin.xml
@@ -4,125 +4,134 @@
   <extension
         point="org.elwiki.api.WikiPlugin">
      <wikiPlugin
-           class="org.elwiki.plugins.ReferredPagesPlugin"
-           name="ReferredPagesPlugin">
-     </wikiPlugin>
-     <wikiPlugin
-           class="org.elwiki.plugins.TableOfContents"
-           name="TableOfContents">
-     </wikiPlugin>
-     <wikiPlugin
-           class="org.elwiki.plugins.Counter"
-           name="Counter">
-     </wikiPlugin>
-     <wikiPlugin
-           class="org.elwiki.plugins.CurrentTimePlugin"
-           name="CurrentTimePlugin">
-     </wikiPlugin>
-     <wikiPlugin
-           class="org.elwiki.plugins.Table"
-           name="Table">
-     </wikiPlugin>
-  </extension>
-  <extension
-        point="org.elwiki.api.WikiPlugin">
-     <wikiPlugin
-           class="org.elwiki.plugins.ReferringPagesPlugin"
-           name="ReferringPagesPlugin">
-     </wikiPlugin>
-  </extension>
-  <extension
-        point="org.elwiki.api.WikiPlugin">
-     <wikiPlugin
-           class="org.elwiki.plugins.pageview.PageViewPlugin"
-           name="PageViewPlugin">
-     </wikiPlugin>
-  </extension>
-  <extension
-        point="org.elwiki.api.WikiPlugin">
-     <wikiPlugin
-           class="org.elwiki.plugins.InsertPage"
-           name="InsertPage">
-     </wikiPlugin>
-  </extension>
-  <extension
-        point="org.elwiki.api.WikiPlugin">
-     <wikiPlugin
-           class="org.elwiki.plugins.Image"
-           name="Image">
-     </wikiPlugin>
-     <wikiPlugin
-           class="org.elwiki.plugins.BugReportHandler"
-           name="BugReportHandler">
-     </wikiPlugin>
-     <wikiPlugin
-           class="org.elwiki.plugins.denounce.Denounce"
-           name="Denounce">
-     </wikiPlugin>
-     <wikiPlugin
-           class="org.elwiki.plugins.Groups"
-           name="Groups">
-     </wikiPlugin>
-     <wikiPlugin
-           alias="If"
-           class="org.elwiki.plugins.If"
-           name="IfPlugin">
-     </wikiPlugin>
-     <wikiPlugin
+           alias="Index"
            class="org.elwiki.plugins.IndexPlugin"
            name="IndexPlugin">
-     </wikiPlugin>
-     <wikiPlugin
-           class="org.elwiki.plugins.ListLocksPlugin"
-           name="ListLocksPlugin">
-     </wikiPlugin>
-     <wikiPlugin
-           class="org.elwiki.plugins.Note"
-           name="Note">
      </wikiPlugin>
      <wikiPlugin
            class="org.elwiki.plugins.RecentChangesPlugin"
            name="RecentChanges">
      </wikiPlugin>
      <wikiPlugin
+           alias="ReferredPages"
+           class="org.elwiki.plugins.ReferredPagesPlugin"
+           name="ReferredPagesPlugin">
+     </wikiPlugin>
+     <wikiPlugin
+           alias="ReferringPages"
+           class="org.elwiki.plugins.ReferringPagesPlugin"
+           name="ReferringPagesPlugin">
+     </wikiPlugin>
+     <wikiPlugin
+           alias="ReferringUndefinedPages"
            class="org.elwiki.plugins.ReferringUndefinedPagesPlugin"
            name="ReferringUndefinedPagesPlugin">
+     </wikiPlugin>
+     <wikiPlugin
+           alias="UndefinedPages"
+           class="org.elwiki.plugins.UndefinedPagesPlugin"
+           name="UndefinedPagesPlugin">
+     </wikiPlugin>
+     <wikiPlugin
+           alias="UnusedPages"
+           class="org.elwiki.plugins.UnusedPagesPlugin"
+           name="UnusedPagesPlugin">
+     </wikiPlugin>
+  </extension>
+  <extension
+        point="org.elwiki.api.WikiPlugin">
+     <wikiPlugin
+           alias="Image"
+           class="org.elwiki.plugins.ImagePlugin"
+           name="ImagePlugin">
+     </wikiPlugin>
+     <wikiPlugin
+           alias="PageView"
+           class="org.elwiki.plugins.pageview.PageViewPlugin"
+           name="PageViewPlugin">
+     </wikiPlugin>
+     <wikiPlugin
+           class="org.elwiki.plugins.TableOfContentsPlugin"
+           name="TableOfContents">
+     </wikiPlugin>
+     <wikiPlugin
+           class="org.elwiki.plugins.TablePlugin"
+           name="Table">
+     </wikiPlugin>
+  </extension>
+  <extension
+        point="org.elwiki.api.WikiPlugin">
+     <wikiPlugin
+           class="org.elwiki.plugins.CounterPlugin"
+           name="Counter">
+     </wikiPlugin>
+     <wikiPlugin
+           alias="CurrentTime"
+           class="org.elwiki.plugins.CurrentTimePlugin"
+           name="CurrentTimePlugin">
+     </wikiPlugin>
+     <wikiPlugin
+           alias="Denounce"
+           class="org.elwiki.plugins.denounce.DenouncePlugin"
+           name="DenouncePlugin">
+     </wikiPlugin>
+     <wikiPlugin
+           alias="Groups"
+           class="org.elwiki.plugins.GroupsPlugin"
+           name="GroupsPlugin">
+     </wikiPlugin>
+     <wikiPlugin
+           alias="If"
+           class="org.elwiki.plugins.IfPlugin"
+           name="IfPlugin">
+     </wikiPlugin>
+     <wikiPlugin
+           alias="InsertPage"
+           class="org.elwiki.plugins.InsertPagePlugin"
+           name="InsertPagePlugin">
+     </wikiPlugin>
+     <wikiPlugin
+           alias="ListLocks"
+           class="org.elwiki.plugins.ListLocksPlugin"
+           name="ListLocksPlugin">
+     </wikiPlugin>
+     <wikiPlugin
+           alias="Note"
+           class="org.elwiki.plugins.NotePlugin"
+           name="NotePlugin">
      </wikiPlugin>
      <wikiPlugin
            class="org.elwiki.plugins.SampleAjaxPlugin"
            name="SampleAjaxPlugin">
      </wikiPlugin>
      <wikiPlugin
-           class="org.elwiki.plugins.Search"
-           name="Search">
+           alias="Search"
+           class="org.elwiki.plugins.SearchPlugin"
+           name="SearchPlugin">
      </wikiPlugin>
      <wikiPlugin
+           alias="Sessions"
            class="org.elwiki.plugins.SessionsPlugin"
            name="SessionsPlugin">
-     </wikiPlugin>
-     <wikiPlugin
-           class="org.elwiki.plugins.UndefinedPagesPlugin"
-           name="UndefinedPagesPlugin">
-     </wikiPlugin>
-     <wikiPlugin
-           class="org.elwiki.plugins.UnusedPagesPlugin"
-           name="UnusedPagesPlugin">
-     </wikiPlugin>
-     <wikiPlugin
-           class="org.elwiki.plugins.WeblogArchivePlugin"
-           name="WeblogArchivePlugin">
-     </wikiPlugin>
-     <wikiPlugin
-           class="org.elwiki.plugins.WeblogEntryPlugin"
-           name="WeblogEntryPlugin">
-     </wikiPlugin>
-     <wikiPlugin
-           class="org.elwiki.plugins.WeblogPlugin"
-           name="WeblogPlugin">
      </wikiPlugin>
   </extension>
   <extension
         point="org.elwiki.api.WikiPlugin">
+     <wikiPlugin
+           alias="WeblogArchive"
+           class="org.elwiki.plugins.WeblogArchivePlugin"
+           name="WeblogArchivePlugin">
+     </wikiPlugin>
+     <wikiPlugin
+           alias="WeblogEntry"
+           class="org.elwiki.plugins.WeblogEntryPlugin"
+           name="WeblogEntryPlugin">
+     </wikiPlugin>
+     <wikiPlugin
+           alias="Weblog"
+           class="org.elwiki.plugins.WeblogPlugin"
+           name="WeblogPlugin">
+     </wikiPlugin>
   </extension>
 
 </plugin>
