--- a/p2_repositories/additional-artifacts/pom.xml
+++ b/p2_repositories/additional-artifacts/pom.xml
@@ -62,10 +62,12 @@
 									<id>org.freshcookies:freshcookies-security:0.60</id>
 									<source>true</source>
 								</artifact>
+<!-- removed. It was used for AtomAPIServlet servlet of JSPwiki.
 								<artifact>
 									<id>net.sourceforge:sandler:0.5</id>
 									<source>true</source>
 								</artifact>
+-->
 							</artifacts>
 						</configuration>
 					</execution>
