implemented support for selecting the page content version.

--- a/elwikijsp.root/bundles/org.elwiki.resources/shapes/default.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/shapes/default.properties
@@ -554,7 +554,7 @@ userbox.button = User Menu
 #
 # PageContent.jsp
 #
-view.backtocurrent       = Back to current version
+view.backtolatest        = Back to latest version
 view.heading.attachments = Attachments
 view.oldversion          = This is version {0}. It is not the current version, and thus it cannot be edited.
 view.restore             = Restore this version
