--- a/elwikijsp.root/features/pom.xml
+++ b/elwikijsp.root/features/pom.xml
@@ -19,6 +19,7 @@
 		<module>org.elwiki.feature</module>
 		<module>jsp.bridge.feature</module>
 		<module>org.elwiki.platform.feature</module>
+		<module>org.elwiki.plugins.feature</module>
 <!--
 		<module>elwiki.test.feature</module>
 		<module>elwiki.test_environment.feature</module>
