--- a/elwikijsp.root/bundles_plugins/org.elwiki.plugins.main/plugin.xml
+++ b/elwikijsp.root/bundles_plugins/org.elwiki.plugins.main/plugin.xml
@@ -9,8 +9,9 @@
            name="IndexPlugin">
      </wikiPlugin>
      <wikiPlugin
+           alias="RecentChanges"
            class="org.elwiki.plugins.RecentChangesPlugin"
-           name="RecentChanges">
+           name="RecentChangesPlugin">
      </wikiPlugin>
      <wikiPlugin
            alias="ReferredPages"
