refactoring the ACL for a page from JSPWiki style to ElWiki; removed Acl manager.

--- a/elwikijsp.root/bundles/org.elwiki.resources/shapes/default.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/shapes/default.properties
@@ -16,6 +16,16 @@
 #  specific language governing permissions and limitations
 #  under the License.
 
+#
+# AclPageContent.jsp
+#
+acl.permission.edit          = Edit permission
+acl.permission.submit.cancel = Cancel
+acl.permission.submit.save   = Save permission
+
+#
+# Any actions.
+#
 actions.confirmlogout       = Please confirm that you want to logout!
 actions.creategroup         = Create group
 actions.creategroup.title   = Create new authorization group
@@ -39,6 +49,7 @@ actions.logout.title        = Log out
 actions.more                = More...
 actions.notcreated          = Page not created yet.
 actions.page                = Page
+actions.page.acl            = List ACL
 actions.page.comment        = Add Comment
 actions.page.create         = Create
 actions.page.delete         = Delete
