add draft pages for edit ACL of page.

--- a/elwikijsp.root/bundles/org.elwiki.resources/shapes/default.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/shapes/default.properties
@@ -19,9 +19,11 @@
 #
 # AclPageContent.jsp
 #
-acl.permission.edit          = Edit permission
-acl.permission.submit.cancel = Cancel
-acl.permission.submit.save   = Save permission
+acl.page.permission.delete        = Delete permission
+acl.page.permission.edit          = Edit permission
+acl.page.permission.roles         = Roles, users. Enter the names, separating them with a new line.
+acl.page.permission.submit.cancel = Cancel
+acl.page.permission.submit.save   = Save permission
 
 #
 # Any actions.
