add PluginListPlugin; beautify code.

--- a/elwikijsp.root/bundles_plugins/org.elwiki.plugins.main/plugin.xml
+++ b/elwikijsp.root/bundles_plugins/org.elwiki.plugins.main/plugin.xml
@@ -97,6 +97,12 @@
            name="ListLocksPlugin">
      </wikiPlugin>
      <wikiPlugin
+           alias="PluginList"
+           author="David Vittor"
+           class="org.elwiki.plugins.PluginListPlugin"
+           name="PluginListPlugin">
+     </wikiPlugin>
+     <wikiPlugin
            alias="Note"
            class="org.elwiki.plugins.NotePlugin"
            name="NotePlugin">
