--- a/elwikijsp.root/bundles/org.elwiki.resources/build.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/build.properties
@@ -9,11 +9,13 @@ bin.includes = .,\
                plugin.xml,\
                taglibs-standard-impl-1.2.5.fixed.jar,\
                taglibs-standard-spec-1.2.5.jar,\
-               shapes/
+               shapes/,\
+               ini/
 additional.bundles = jakarta.servlet-api,\
                      javax.servlet.jsp-api,\
                      org.eclipse.jface,\
                      org.elwiki.data,\
+                     org.elwiki.util,\
                      org.apache.jasper.glassfish,\
                      org.freshcookies.security,\
                      xmlrpc
