remove deprecated jspwiki.properties, jspwiki_module.xml

--- a/elwikijsp.root/bundles/org.elwiki.configuration/build.properties
+++ b/elwikijsp.root/bundles/org.elwiki.configuration/build.properties
@@ -3,7 +3,8 @@ output.. = target/classes/
 bin.includes = META-INF/,\
                .,\
                OSGI-INF/,\
-               preferences.ini
+               preferences.ini,\
+               interwikirefs.properties
 additional.bundles = org.eclipse.osgi,\
                      org.eclipse.core.runtime,\
                      org.eclipse.jface
