--- a/elwikijsp.root/bundles/org.elwiki.configuration/preferences.ini
+++ b/elwikijsp.root/bundles/org.elwiki.configuration/preferences.ini
@@ -18,8 +18,9 @@ eclipse.preferences.version=1
 
 ###########################################################################
 #
-#  This is the JSPWiki configuration file.  You'll need to edit this
-#  a bit.  The first few lines are the most important ones.
+#  This is the file of default values ElWiki configuration.
+#  There is no need for you to edit this.
+#  The first few lines are the most important ones.
 #
 #  If you don't want to edit this file, you can override each individual
 #  property by specifying the property name as a standard
@@ -344,34 +345,6 @@ jspwiki.searchProvider = LuceneSearchProvider
 #
 #jspwiki.lucene.analyzer = org.apache.lucene.analysis.standard.ClassicAnalyzer
 
-############################################################################
-#
-#  Special page references.
-#
-#  The URL is relative to Wiki.jsp.  However, if you use
-#  a full, absolute URL, you can also do that.
-#
-# Example to redirect all requests to a page called 'OriginalWiki'
-# to the original wikiwiki at http://c2.com/cgi/wiki
-#
-# jspwiki.specialPage.OriginalWiki = http://c2.com/cgi/wiki
-#
-#  Note that it is entirely possible to override any Wiki page, even
-#  an existing one by redefining it here.
-#
-jspwiki.specialPage.CreateGroup = NewGroup.jsp
-jspwiki.specialPage.Search = Search.jsp
-jspwiki.specialPage.Login = Login.jsp
-jspwiki.specialPage.NewGroup = NewGroup.jsp
-jspwiki.specialPage.UserPreferences = UserPreferences.jsp
-jspwiki.specialPage.Workflow = Workflow.jsp
-jspwiki.specialPage.Logout = Logout.jsp
-jspwiki.specialPage.CreateProfile = Login.jsp
-jspwiki.specialPage.EditProfile = UserPreferences.jsp
-jspwiki.specialPage.Preferences = UserPreferences.jsp
-jspwiki.specialPage.FindPage = FindPage.jsp
-
-
 #############################################################################
 #
 #  Page filters
@@ -623,61 +596,6 @@ jspwiki.userdatabase = org.apache.wiki.auth.user.XMLUserDatabase
 #  ACL manager, specify the AclManager implementation class here:
 
 jspwiki.aclManager = org.apache.wiki.auth.acl.DefaultAclManager
-
-#############################################################################
-#
-# InterWiki links
-#
-# The %s is replaced with the page reference
-# (specify multiple times to get multiple references).
-# Page references should appear in format : [wiki:wikipage].
-#
-
-# This is the JSPWiki home.  In future, JSPWiki will probably rely on this
-# for error messages, so I don't recommend that you change it.
-node.interWikiRefs/JSPWiki = http://jspwiki-wiki.apache.org/Wiki.jsp?page=%s
-
-# Here's how you can have directly links to the JSPWiki editor.
-# Now you can put a hyperlink for editing "MainPage" by making a link [Edit:MainPage].
-node.interWikiRefs/Edit = cmd.edit?pageId=%s
-
-# A link to the raw wikimarkup of the page : [Raw:MainPage]
-node.interWikiRefs/Raw = cmd.view?pageId=%s&skin=raw
-
-# A link to the reader view of the page (no leftmenu, fit for printing) : [Reader:MainPage]
-node.interWikiRefs/Reader = cmd.view?pageId=%s&skin=reader
-
-#  A link to a Wiki Group, defined in the Group database.
-node.interWikiRefs/Group = Group.jsp?group=%s
-
-#  A link to the RSS feed for a page
-node.interWikiRefs/RSS = rss.jsp?page=%s&mode=wiki
-
-#  This is the original WikiWikiWeb
-node.interWikiRefs/WikiWikiWeb = http://c2.com/cgi/wiki?%s
-
-#  TWiki, a very nice WikiClone.
-node.interWikiRefs/TWiki = http://twiki.org/cgi-bin/view/TWiki/%s
-
-#  MeatballWiki, which seems to be quite popular.
-node.interWikiRefs/MeatballWiki = http://usemod.com/cgi-bin/mb.pl?%s
-
-#  Wikipedia, a Wiki encyclopedia!
-node.interWikiRefs/Wikipedia = http://www.wikipedia.com/wiki/%s
-
-#  Google, the ubiquitous search engine.
-node.interWikiRefs/Google = http://www.google.com/search?q=%s
-
-#  Google Maps, the ubiquitous internet map
-node.interWikiRefs/Location = https://maps.google.com/maps?q=%s
-
-#  JSPWiki documentation (for this release)
-node.interWikiRefs/Doc = http://jspwiki-wiki.apache.org/Wiki.jsp?page=%s
-
-# JIRA Issue Tracker
-node.interWikiRefs/JIRA = https://issues.apache.org/jira/browse/JSPWIKI-%s
-
-node.interWikiRefs/keys=Edit:Raw:Reader:Doc:Google:Group:JIRA:JSPWiki:Location:MeatballWiki:RSS:TWiki:WikiWikiWeb:Wikipedia
 
 
 ############################################################################
@@ -953,12 +871,10 @@ log4j.rootCategory=INFO,ConsoleLog
 # Uncomment the next line to require the Admin group (or Admin user, if a group is not found)
 # to approve wiki pages after saving.
 #jspwiki.approver.workflow.saveWikiPage=Admin
-#node.approvers/workflow.saveWikiPage=Admin
 
 
 # Uncomment the next line to require the Admin group to approve new user profiles
 #jspwiki.approver.workflow.createUserProfile=Admin
-#node.approvers/workflow.createUserProfile=Admin
 
 ###########################################################################
 #
