--- a/elwikijsp.root/bundles/org.elwiki.resources/main/webapp/WEB-INF/web.xml
+++ b/elwikijsp.root/bundles/org.elwiki.resources/main/webapp/WEB-INF/web.xml
@@ -57,10 +57,10 @@
       non-null values for getUserPrincipal() or getRemoteUser(), WikiSecurityFilter
       will pick the credentials up, and set the user's WikiSession state to
       "authenticated." WikiServletFilter will also set the WikiSession's' state
-      to "authenticated" if jspwiki.properties property "jspwiki.cookieAuthentication"
+      to "authenticated" if preferences.ini property "jspwiki.cookieAuthentication"
       is set to true, and the user possesses the correct authentication cookie.
 
-      Lastly, if jspwiki.properties property "jspwiki.cookieAssertions" is set to true,
+      Lastly, if preferences.ini property "jspwiki.cookieAssertions" is set to true,
       WikiServletFilter will also set WikiSession state to "asserted" if the user
       possesses the correct "assertion cookie."
    -->
